# Student-Information-Management-System

./: .gitignore  CMakeLists.txt  README.md
include/: manager.hpp  msystem.hpp  student.hpp  utility.hpp
main/: main.cpp
src/: manager.cpp  msystem.cpp  student.cpp  utility.cpp
